restructirized code, assign more readable namespaces

--- a/Editor/OverrideEditors.asmdef
+++ b/Editor/OverrideEditors.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "DefaultAssetEditor",
-    "rootNamespace": "B.PerAssetEditors",
+    "name": "OverrideEditors",
+    "rootNamespace": "OverrideEditors",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
