safer deserialization, edtitor platform
> json editor improvements
-> not re-imports when content not changes
-> safer serialization

> fix targeting platform in editor assembly

--- a/Editor/OverrideEditors.asmdef
+++ b/Editor/OverrideEditors.asmdef
@@ -2,7 +2,9 @@
     "name": "OverrideEditors",
     "rootNamespace": "OverrideEditors",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
